# chatbyte-be

./: .env  .gitignore  Cargo.toml  Dockerfile  dev  docker-compose.yml  postgres  readme.md  run-postgres.sh  rustfmt.toml
database/: init.sql
database/initial/: attachment.sql  contact.sql  group.sql  message.sql  session.sql
pyclient/: main.py
sql/: coretan.sql  init.sql  insert-tables.sql  raw_dump.sql  tables.sql  templates.sql
sql/initial/: attachment.sql  group.sql  message.sql  reset.sql  session.sql  user.sql  user_avatar.sql  views.sql
src/: app.rs  main.rs  middleware.rs  run.rs  utility.rs
src/_deprecated/actor/: server.rs  session.rs
src/_deprecated/repository/: auth.rs
src/actix_routes/: attachment.rs  auth.rs  contact.rs  group.rs  message.rs  mod.rs  user.rs  websocket.rs
src/entities/: blog.rs  image.rs  message.rs  mod.rs  prelude.rs  user.rs  user_avatar.rs
src/message/: application.rs  message.rs  mod.rs  server.rs  session.rs
src/repository/: auth.rs  auth_repository.rs  contact.rs  contact_repository.rs  group.rs  group_repository.rs  message.rs  message_repository.rs  mod.rs  session.rs  user.rs  user_repository.rs
src/repository/attachment/: mod.rs  model.rs  repository.rs
src/repository/auth/: mod.rs  model.rs  repository.rs  statement.rs
src/repository/contact/: mod.rs  model.rs  repository.rs  statement.rs
src/repository/entities/: blog.rs  message.rs  mod.rs  prelude.rs  session.rs  user.rs  user_avatar.rs
src/repository/group/: mod.rs  model.rs  repository.rs  statement.rs
src/repository/message/: mod.rs  model.rs  repository.rs  statement.rs
src/repository/session/: mod.rs  model.rs  repository.rs  statement.rs
src/repository/user/: mod.rs  model.rs  repository.rs  statement.rs
src/req_model/: auth_req_model.rs  mod.rs
src/res_model/: auth_res_model.rs  mod.rs
src/routes/: attachment.rs  auth.rs  auth_route.rs  contact.rs  contact_route.rs  group.rs  group_route.rs  healthcheck.rs  healthcheck_route.rs  message.rs  message_route.rs  mod.rs  model.rs  user.rs  user_route.rs  websocket.rs  websocket_route.rs
src/routes/attachment/: mod.rs  route.rs
src/routes/auth/: model.rs  route.rs
src/routes/contact/: route.rs
src/routes/group/: mod.rs  route.rs
src/routes/message/: model.rs  route.rs
src/routes/user/: model.rs  route.rs
src/routes/websocket/: route.rs
src/service/: mod.rs  session.rs  ws_server.rs
src/utility/: date.rs  mod.rs  old.rs
src/websocket/: message.rs  mod.rs  model.rs  server.rs  session.rs
(+14 files in other folders)
