[package]
name = "chatbyte-be"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[dependencies]
actix-web = "4"
actix-cors = "0.6.4"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sea-orm = { version = "0.11.3", features = [ "sqlx-postgres", "runtime-actix-rustls", "macros" ] }
env_logger = "0.10.0"
bcrypt = "0.14"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.6"
futures-util = "0.3.28"
chrono = "0.4.26"
actix-web-actors = "4.2.0"
actix = "0.13.0"
actix-broker = "0.4.3"
rand = "0.8.5"
futures = "0.3.28"
tokio = { version = "1.32.0", features = ["sync", "macros", "time"] }
actix-ws = "0.2.5"
merge-streams = "0.1.2"
regex = "1.9.5"
sqlx = { version = "0.7.1", features = ["runtime-tokio", "tls-native-tls", "postgres", "chrono"] }
actix-multipart = "0.6.1"
actix-multipart-extract = "0.1.5"
bindet = "0.3.2"
base64 = "0.21.4"
actix-http = "3.4.0"
axum = { version = "0.6.20", features = ["ws", "multipart"] }
anyhow = "1.0.75"
thiserror = "1.0.49"
tower-http = { version = "0.4.4", features = ["cors"] }